--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "primevue": "^4.5.4",
     "qrcode": "^1.5.4",
     "vue": "^3.5.24",
+    "vue-i18n": "^11.2.7",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
